[gd_scene load_steps=40 format=3 uid="uid://bmd82veu6xh3r"]

[ext_resource type="Script" uid="uid://ddsdkq0o5absp" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://uyxu6jte2w61" path="res://assets/sprites/Units/Red Units/Warrior/Warrior_Idle.png" id="2_c4w8v"]
[ext_resource type="Texture2D" uid="uid://bkhmshlf5pa0f" path="res://assets/sprites/Units/Red Units/Warrior/Warrior_Attack1.png" id="2_xwavj"]
[ext_resource type="Texture2D" uid="uid://bqqosqw4c0xom" path="res://assets/sprites/Interface/healthbarUnder.png" id="3_5uy6h"]
[ext_resource type="Texture2D" uid="uid://cykia3bql5j5l" path="res://assets/sprites/Units/Red Units/Warrior/Warrior_Run.png" id="3_xwavj"]
[ext_resource type="Texture2D" uid="uid://5vk0af6rb7qd" path="res://assets/sprites/Interface/healthbarProgress.png" id="4_c4w8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t3vcr"]
atlas = ExtResource("2_xwavj")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaulx"]
atlas = ExtResource("2_xwavj")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f82d"]
atlas = ExtResource("2_xwavj")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lioqc"]
atlas = ExtResource("2_xwavj")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("2_c4w8v")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("2_c4w8v")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("2_c4w8v")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("2_c4w8v")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("2_c4w8v")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("2_c4w8v")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("2_c4w8v")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("2_c4w8v")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("3_xwavj")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("3_xwavj")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("3_xwavj")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("3_xwavj")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("3_xwavj")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwtc"]
atlas = ExtResource("3_xwavj")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogs8"]
atlas = ExtResource("3_xwavj")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrm80"]
atlas = ExtResource("3_xwavj")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awcb"]
atlas = ExtResource("3_xwavj")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjec0"]
atlas = ExtResource("3_xwavj")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rgx"]
atlas = ExtResource("3_xwavj")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mchx"]
atlas = ExtResource("3_xwavj")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_605iw"]
animations = [{
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_t3vcr")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_qaulx")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_1f82d")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_lioqc")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j0cyh")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_s1ycm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_shcg2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_1x4g4")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_2pwtc")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j0cyh")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_rogs8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wjec0")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_i4rgx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_2mchx")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j0cyh")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_rogs8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wjec0")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_i4rgx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_2mchx")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6q4o"]
radius = 525.76276

[sub_resource type="CircleShape2D" id="CircleShape2D_4ra3w"]
radius = 18.571428

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 38.6771

[sub_resource type="CircleShape2D" id="CircleShape2D_xwavj"]
radius = 52.85715

[sub_resource type="Animation" id="Animation_xwavj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHit/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHit/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5.714286, -25.714289)]
}

[sub_resource type="Animation" id="Animation_0lg75"]
resource_name = "attack"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHit/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.37871632, 0.86861104),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHit/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5.714286, -25.714289)]
}

[sub_resource type="Animation" id="Animation_nenq2"]
resource_name = "attack_left"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHit/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.36742103, 0.9596568),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHit/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10.000002, -25.714289)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsnsy"]
_data = {
&"RESET": SubResource("Animation_xwavj"),
&"attack": SubResource("Animation_0lg75"),
&"attack_left": SubResource("Animation_nenq2")
}

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.7, 0.7)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_605iw")
animation = &"attack"
frame = 3
frame_progress = 0.14605473
offset = Vector2(0, -34)
flip_h = true

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1.4285713, -17.142857)
shape = SubResource("CircleShape2D_x6q4o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-7.1054274e-15, -9.999998)
shape = SubResource("CircleShape2D_4ra3w")

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1.4285713, -28.571426)
shape = SubResource("CircleShape2D_md0e3")

[node name="TakeDamageCooldown" type="Timer" parent="."]
wait_time = 0.432

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -32.857143
offset_top = 11.428574
offset_right = 34.28571
offset_bottom = 24.142859
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
texture_under = ExtResource("3_5uy6h")
texture_progress = ExtResource("4_c4w8v")

[node name="SwordHit" type="Area2D" parent="."]
scale = Vector2(0.99999994, 0.99999994)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHit"]
position = Vector2(5.714286, -25.714289)
shape = SubResource("CircleShape2D_xwavj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lsnsy")
}

[node name="AttackCooldown" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="TakeDamageCooldown" to="." method="_on_take_damage_timeout"]
[connection signal="area_entered" from="SwordHit" to="." method="_on_sword_hit_area_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
